--- a/P2023.AIBCCSS.Sillabo.tex
+++ b/P2023.AIBCCSS.Sillabo.tex
@@ -234,7 +234,7 @@ Viale Quirico Filopanti, 1-3 - Bologna \\
 	%---s Load the table body: dynamic table content. 
 \midrule
     \endhead
-	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Presentazione del corso, introduzione al mercato software, alla natura del dato, e ai problemi principali nello sviluppo software]  \\
+	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Presentazione del corso, introduzione all'ingegneria del software - problemi tame e wicked]  \\
 	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL03.L04.pdf}{Lucidi presentati dal docente sul corso e sulla natura del mercato e del dato}] \\
 	& \dataeora[20 settembre 2022, 17-19] \\
 	\hline    
