--- a/P2023.AIBCCSS.Sillabo.tex
+++ b/P2023.AIBCCSS.Sillabo.tex
@@ -129,6 +129,11 @@ Pur non avendo alcun prerequisito formale, il corso si caratterizza come corso d
 \item nelle successive sessioni, la valutazione si baserà su un orale onnicomprensivo.
 \end{itemize}
 
+\customsection{Possibili progetto}    
+\noindent
+Simulare il comportamento di trader nel mercato delle criptovalute utilizzando modelli regressivi con funzione di costo basata sulla distanza di Kendall.
+
+
 \customsection{Testi}  
 %---------------------------------
 %--> List of recommended textbooks. 
@@ -235,94 +240,85 @@ Viale Quirico Filopanti, 1-3 - Bologna \\
 \midrule
     \endhead
 	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Presentazione del corso, introduzione all'ingegneria del software - problemi tame e wicked]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL03.L04.pdf}{Lucidi presentati dal docente sul corso e sulla natura del mercato e del dato}] \\
-	& \dataeora[20 settembre 2022, 17-19] \\
+	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.AIBCCSS.P2023/blob/main/P2023.AIBCCSS.L01.L02.L03.IlConcettoDiSoftware.pdf}{Lucidi presentati dal docente sull'introduzione all'ingegneria del software - problemi tame e wicked}] \\
+	& \dataeora[1 marzo 2023] \\
 	\hline    
-	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[La produzione del software nel lavoro (condiviso); gitHub]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL02.pdf}{Lucidi presentati dal docente sulla produzione del software nel lavoro (condiviso)}] \\
-	& \dataeora[21 settembre 2022, 15-17] \\
-	\hline    
-	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Il dato come documento; La scrittura di documenti in LaTex come paradigma della produzione digitale (parte 1)]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL03.L04.pdf}{Lucidi presentati dal docente su LaTeX}] \\
-	& \dataeora[21 settembre 2022, 17-19] \\
-	\hline    
-	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[La scrittura di documenti in LaTex come paradigma della produzione digitale (parte 2)]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL03.L04.pdf}{Lucidi presentati dal docente su LaTeX}] \\
-	& \dataeora[5 ottobre 2022, 15-17] \\
-	\hline    
-%	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Struttura dei calcolatori]  \\
-%	& \materialedidattico \\
-%	\hline    
-%	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Sistemi operativi e reti]  \\
-%	& \materialedidattico \\
-%	\hline    
-%	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Linguaggi di programmazione]  \\
-%	& \materialedidattico \\
-%	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Processo di produzione del software]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL05.pdf}{Lucidi presentati dal docente sul processo di produzione del software}] \\
-	& \dataeora[5 ottobre 2022, 17-19] \\
-	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Sperimentazione e deduzione; il modello GQM]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL06.pdf}{Lucidi presentati dal docente sui fondamenti della sperimentazione, deduzione, misurazione e GQM}] \\
-	& \dataeora[11 ottobre 2022, 17-19] \\
-	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Scale di dati]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/main/A2022.IDSEPCL07.pdf}{Lucidi presentati dal docente sulle scale di dati}] \\
-	& \dataeora[12 ottobre 2022, 15-17] \\
-	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Revisione dei fondamenti di statistica descrittiva (parte 1)]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/4794e0972fcff9675c9169ed87172dc57bf0eaa1/A2022.IDSEPCL08.pdf}{Lucidi presentati dal docente sulla statistica descrittiva}] \\
-	& \dataeora[12 ottobre 2022, 17-19] \\
-	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Revisione dei fondamenti di statistica descrittiva (parte 2)]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/4794e0972fcff9675c9169ed87172dc57bf0eaa1/A2022.IDSEPCL08.pdf}{Lucidi presentati dal docente sulla statistica descrittiva}] \\
-	& \dataeora[18 ottobre 2022, 17-19] \\
-	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Progettazione degli esperimenti]  \\
+	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Processi di sviluppo software]  \\
 	& \materialedidattico \\
-	& \dataeora[19 ottobre 2022, 15-17] \\
+	& \dataeora[2 marzo 2023] \\
 	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Statistica inferenziale -- le basi e principi di regressione lineare]  \\
-	& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/4794e0972fcff9675c9169ed87172dc57bf0eaa1/A2022.IDSEPCL09.pdf}{Lucidi presentati dal docente sulla regressione lineare}]  \\
-	& \dataeora[19 ottobre 2022, 17-19] \\
+	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Processi di sviluppo software e modelli agili]  \\
+	& \materialedidattico \\
+	& \dataeora[8 marzo 2023] \\
+	\hline    
+	\centering\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Modelli cognitivi -- misurazione dell'attivit\`{a} cerebrale]  \\
+	& \materialedidattico \\
+	& \dataeora[9 marzo 2023] \\
+	\hline    
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Modelli cognitivi -- impulsive / reactive]  \\
+	& \materialedidattico \\
+	& \dataeora[15 marzo 2023] \\
+	\hline    
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Modelli cognitivi -- intelligenza distribuita]  \\
+	& \materialedidattico \\
+	& \dataeora[16 marzo 2023] \\
+	\hline    
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Modelli cognitivi -- il disegno come strumento di elicitazione della conoscenza]  \\
+	& \materialedidattico \\
+	& \dataeora[22 marzo 2023] \\
+	\hline    
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Modelli cognitivi -- arte e software]  \\
+	& \materialedidattico \\
+	& \dataeora[23 marzo 2023] \\
+	\hline    
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Statistica descrittiva, statistica inferenziale, intelligenza artificiale]  \\
+	& \materialedidattico \\
+	& \dataeora[29 marzo 2023] \\
+	\hline    
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Regressione lineare e correlazione]  \\
+	& \materialedidattico \\
+	& \dataeora[30 marzo 2023] \\
+	\hline    
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Regressione logistica]  \\
+	& \materialedidattico  \\
+	& \dataeora[5 aprile 2023] \\
 	\hline
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Statistica inferenziale -- regressione lineare]  \\
-& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/4794e0972fcff9675c9169ed87172dc57bf0eaa1/A2022.IDSEPCL09.pdf}{Lucidi presentati dal docente sulla regressione lineare}] \\
-	& \dataeora[8 novembre 2022, 17-19] \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Il test di Kolmogorov Smirnov]  \\
+& \materialedidattico \\
+	& \dataeora[12 aprile 2023] \\
 	\hline
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Statistica inferenziale -- la correlazione]  \\
-& \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/4794e0972fcff9675c9169ed87172dc57bf0eaa1/A2022.IDSEPCL10.pdf}{Lucidi presentati dal docente sulla correlazione}]  \\
-	& \dataeora[9 novembre 2022, 15-17] \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Meta-analisi]  \\
+& \materialedidattico  \\
+	& \dataeora[13 aprile 2023] \\
 	\hline
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Dalla statistica inferenziale all’apprendimento automatico; la regressione logistica]  \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Particle swarm optimization e riduzione di dimensionalit\`{a}]  \\
 
-   & \materialedidattico[\href{https://github.com/GiancarloSucci/UniBo.IDSEPC.A2022/blob/4794e0972fcff9675c9169ed87172dc57bf0eaa1/A2022.IDSEPCL11.pdf}{Lucidi presentati dal docente sulla regressione logistica}]  \\
-	& \dataeora[9 novembre 2022, 17-19] \\
+   & \materialedidattico  \\
+	& \dataeora[19 aprile 2023] \\
 	\hline    
-   \textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Principi di reti neurali (parte 1)]  \\
+   \textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Regressione con distanza di Kendall]  \\
 	& \materialedidattico \\
-	& \dataeora[15 novembre 2022, 17-19] \\
+	& \dataeora[20 aprile 2023] \\
 	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Principi di reti neurali (parte 2)]  \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Blockchain, struttura e criptovalute]  \\
 	& \materialedidattico \\
-	& \dataeora[16 novembre 2022, 15-17] \\
+	& \dataeora[3 maggio 2023] \\
 	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Principi di reti neurali (parte 3)]  \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Criptovalute e sviluppo software]  \\
 	& \materialedidattico \\
-	& \dataeora[16 novembre 2022, 17-19] \\
+	& \dataeora[4 maggio 2023] \\
 	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Analisi automatica di testi (parte 1)]  \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Piattaforma per le criptovalute]  \\
 	& \materialedidattico \\
-	& \dataeora[23 novembre 2022, 17-19] \\
+	& \dataeora[10 maggio 2023] \\
 	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Analisi automatica di testi (parte 2)]  \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Presentazione dei progetti]  \\
 	& \materialedidattico \\
-	& \dataeora[29 novembre 2022, 17-19] \\
+	& \dataeora[11 maggio 2023] \\
 	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Analisi automatica di testi (parte 3)]  \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Presentazione dei progetti]  \\
 	& \materialedidattico \\
-	& \dataeora[30 novembre 2022, 17-19] \\
+	& \dataeora[17 maggio 2023] \\
 	\hline    
 
 \end{longtable}   
