--- a/P2023.AIBCCSS.Sillabo.tex
+++ b/P2023.AIBCCSS.Sillabo.tex
@@ -125,7 +125,7 @@ Pur non avendo alcun prerequisito formale, il corso si caratterizza come corso d
 
 \customsection{Valutazione}    
 \begin{itemize}
-\item Nella prima sessione di esame, lo studente in corso può scegliere tra un orale onnicomprensivo e un progetto (eventualmente da svolgersi in gruppo) sui temi del corso ed assegnato dal docente;
+\item Nella prima sessione di esame, lo studente in corso può scegliere tra un orale onnicomprensivo e un progetto (eventualmente da svolgersi in gruppo) sui temi del corso ed assegnato dal docente; ci saranno inoltre test in classe per valutare l'apprendimento incrementale del materiale presentato.
 \item nelle successive sessioni, la valutazione si baserà su un orale onnicomprensivo.
 \end{itemize}
 
