Ready before first lecture

--- a/P2023.AIBCCSS.L04.P2.ModelliCognitiviNelloSviluppoSoftware.BrainSignals.tex
+++ b/P2023.AIBCCSS.L04.P2.ModelliCognitiviNelloSviluppoSoftware.BrainSignals.tex
@@ -115,8 +115,8 @@
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
-\title[L01]{Artificial Intelligence, Blockchain, e Criptovalute nello Sviluppo Software \newline\newline
-Lezione 4: Artificial Intelligence in Software Development} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title[L04]{Artificial Intelligence, Blockchain, e Criptovalute nello Sviluppo Software \newline\newline
+Lezione 4: Cognitive Models in Software Development -- Measuring brain signals} % The short title appears at the bottom of every slide, the full title is only on the title page
 
 \author[{\tiny Giancarlo Succi }]{Giancarlo Succi\\\\ Dipartimento di Informatica -- Scienza e Ingegneria\\Universit\`{a} di Bologna\\
 \bftt{g.succi@unibo.it}
