--- a/P2023.AIBCCSS.Sillabo.tex
+++ b/P2023.AIBCCSS.Sillabo.tex
@@ -255,7 +255,7 @@ Viale Quirico Filopanti, 1-3 - Bologna \\
 	& \materialedidattico \\
 	& \dataeora[9 marzo 2023] \\
 	\hline    
-	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Modelli cognitivi -- impulsive / reactive]  \\
+	\textbf{\thelezione \addtocounter{lezione}{1}} &   \argomento[Modelli cognitivi -- impulsive / reflective]  \\
 	& \materialedidattico \\
 	& \dataeora[15 marzo 2023] \\
 	\hline    
