--- a/P2023.AIBCCSS.L04.P2.ModelliCognitiviNelloSviluppoSoftware.BrainSignals.tex
+++ b/P2023.AIBCCSS.L04.P2.ModelliCognitiviNelloSviluppoSoftware.BrainSignals.tex
@@ -168,8 +168,9 @@ Lezione 4: Cognitive Models in Software Development -- Measuring brain signals} 
     \item W. Klimesch, M. Doppelmayr, T. Pachinger, and B. Ripper, ``Brain oscillations  and  human  memory:  EEG  correlates  in  the  upper  alpha  and  theta band,'' Neuroscience letters, vol. 238, no. 1-2, pp. 9–12, 1997.
     \item  I. Crk, T. Kluthe, and A. Stefik ``Understanding programming expertise:An empirical study of phasic brain wave changes,''  ACM Transactions on Computer-Human Interaction (TOCHI), vol. 23, no. 1, pp. 1–29, 2015
     \item \href{https://en.wikipedia.org/wiki/10\%5C\%E2\%5C\%80\%5C\%9320_system_(EEG).}{Wikipedia} - 10–20  system  (EEG)
+    \item additional resources as specified in each slide
 \end{itemize}
-\item The team composing them included Sergei Bakaleinik (main writer), Sara Busechian, Gcinizwe Dlamini, and Giancarlo Succi
+\item The team composing it included Sergei Bakaleinik (main writer), Sara Busechian, Gcinizwe Dlamini, and Giancarlo Succi
 \end{itemize}
 
 \end{frame}
@@ -191,7 +192,7 @@ Lezione 4: Cognitive Models in Software Development -- Measuring brain signals} 
     \item Steps in the processing of EEG data
     \item About the MNE
     \item Steps undertaken in Python to analyse data from EEG
-    \item Main techniques in EEG analyzing
+    \item Main techniques in analyzing EEG 
 \end{itemize}
 \end{frame}
 
@@ -290,9 +291,9 @@ Lezione 4: Cognitive Models in Software Development -- Measuring brain signals} 
         \item electrical,
         \item chemical.
     \end{itemize}
+    \item Examples: smell, convert chemical to electrical signals; sight send electrical signals to brain.
 \end{itemize}
 
-For example: smell, convert chemical to electrical signals; sight send electrical signals to brain.
 
 \end{frame}
 
