--- a/P2023.AIBCCSS.L05.ModelliCognitiviNelloSviluppoSoftware.ImpulsiveReactive.tex
+++ b/P2023.AIBCCSS.L05.ModelliCognitiviNelloSviluppoSoftware.ImpulsiveReactive.tex
@@ -156,7 +156,13 @@ Lezione 5: Cognitive Models in Software Development -- acquisition, retention, a
 {\centerline{Structure of the lecture}}
 \begin{itemize}
     \item The concept of cognition
-    \item Early model
+    \item Early models
+    \begin{itemize}
+        \item Attribution theory
+        \item The na\"{i}ve scientist
+        \item Stereotypes
+        \item Heuristics
+    \end{itemize} 
     \item Impulsive / Reflective model
     \item Implications for software production
 \end{itemize} 
@@ -238,8 +244,6 @@ Lezione 5: Cognitive Models in Software Development -- acquisition, retention, a
     Heider, F (1944). ``Social perception and phenomenal causality.'' Psychological Review. 51(6):358–374.}
 \end{center}
 \end{frame}
-
-
 
 \begin{frame}
 {\centerline{The Na\"{i}ve Scientist}}
