--- a/P2023.AIBCCSS.L05.ModelliCognitiviNelloSviluppoSoftware.ImpulsiveReactive.tex
+++ b/P2023.AIBCCSS.L05.ModelliCognitiviNelloSviluppoSoftware.ImpulsiveReactive.tex
@@ -167,8 +167,29 @@ Lezione 5: Cognitive Models in Software Development -- acquisition, retention, a
     \end{itemize} 
     \item Impulsive / Reflective model
     \item Implications for software production
+    \item \textcolor{blue}{Everything we discuss here are \textcolor{red}{\bf working hypotheses}: we have to remember that working hypotheses even if later proved to be wrong, helped the progress of science and technology, e.g., celestial spheres}
 \end{itemize} 
+\begin{center}
+    \tiny{Refer to \url{https://en.wikipedia.org/wiki/Celestial_spheres}}
+\end{center}
+
 \end{frame}
+
+\begin{frame}
+{\centerline{A working hypothesis}}
+
+\begin{center}
+
+ \includegraphics[width=6cm]{P2023.AIBCCSS.KnowledgeAcquisitionRetentionUse/Ptolemaicsystem.png}
+ 
+ \end{center}
+
+
+\begin{center}
+    \tiny{Picture taken from \url{https://en.wikipedia.org/wiki/Celestial_spheres}}
+\end{center}
+\end{frame}
+
 
 \begin{frame}
 {\centerline{Cognition}}
@@ -185,13 +206,88 @@ Lezione 5: Cognitive Models in Software Development -- acquisition, retention, a
 \begin{frame}
 {\centerline{Storing information}}
 \begin{itemize}
-    \item There have been proposals to divide the storage of information in the human brain in two parts:
+    \item There have been proposals to divide the storage of information in the human brain in two (or three) parts:
     \begin{itemize}
         \item short term memory
         \item long term memory
+        \item (working memory)
     \end{itemize}
-    \item In this context we review existing models of knowledge throughout their historical evolution
+    \item we will now shortly review such concepts
 \end{itemize} 
+\end{frame}
+
+
+\begin{frame}
+{\centerline{General Model}}
+
+\begin{center}
+
+ \includegraphics[width=12cm]{P2023.AIBCCSS.KnowledgeAcquisitionRetentionUse/MemoryStructure.jpg}
+ 
+ \end{center}
+
+
+\begin{center}
+    \tiny{Picture taken from 
+    Camina Eduardo, G\"{u}ell Francisco (2017). ``The Neuroanatomical, Neurophysiological and Psychological Basis of Memory: Current Models and Their Origins.'' Frontiers in Pharmacology 8}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Short Term Memory}}
+\begin{itemize}
+    \item Short term memory is a function of the brain finalized of storing information ready to be used for a short amount of time
+  \item The time-span for storage of such information is of the order of 18 seconds
+  \item Repetition helps in increasing the time the information is stored there
+  \item Capacity is believed to be of 7 $\pm$ 2 elements
+  \item Some researchers include in it the working memory
+\end{itemize} 
+
+\begin{center}
+    \tiny{Taken from \url{https://en.wikipedia.org/wiki/Short-term_memory}\\
+    Camina Eduardo, G\"{u}ell Francisco (2017). ``The Neuroanatomical, Neurophysiological and Psychological Basis of Memory: Current Models and Their Origins.'' Frontiers in Pharmacology 8}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Working Memory (1/2)}}
+\begin{itemize}
+    \item There are hypotheses that separated from the short term memory there is a memory retaining information for the specific purpose of making computations
+    \item Such memory is called working memory
+    \item There are proposals suggesting that it is multicomponent
+\end{itemize} 
+
+\begin{center}
+
+ \includegraphics[width=4cm]{P2023.AIBCCSS.KnowledgeAcquisitionRetentionUse/MulticomponentWorkingMemory.png}
+ 
+ \end{center}
+
+\begin{center}
+    \tiny{Taken from \url{https://en.wikipedia.org/wiki/Working_memory}. The picture is credited there to come from Baddeley AD, Hitch G (1974). Bower GH (ed.). ``Working Memory. Psychology of Learning and Motivation.'' Vol. 2. Academic Press. pp. 47–89. }
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Working Memory (2/2)}}
+\begin{itemize}
+    \item There are also hypotheses that the working memory is part of the long term memory
+    \item Information is extracted from there with a kind of cashing mechanism
+\end{itemize} 
+
+\begin{center}
+
+ \includegraphics[width=8cm]{P2023.AIBCCSS.KnowledgeAcquisitionRetentionUse/WorkingMemoryPartOfLongTermMemory.jpg}
+ 
+ \end{center}
+
+\begin{center}
+    \tiny{Taken from \url{https://en.wikipedia.org/wiki/Working_memory}. The picture is credited there to come from Ericsson KA, Kintsch W (April 1995). ``Long-term working memory.'' Psychological Review. 102 (2): 211–245. }
+\end{center}
+
 \end{frame}
 
 
