--- a/P2023.AIBCCSS.L05.CognitiveModelsInSoftwareDevelopment.ImpulsiveReactive.tex
+++ b/P2023.AIBCCSS.L05.CognitiveModelsInSoftwareDevelopment.ImpulsiveReactive.tex
@@ -319,7 +319,7 @@ Lezione 5: Cognitive Models in Software Development -- acquisition, retention, a
 {\centerline{Working Memory (2/2)}}
 \begin{itemize}
     \item There are also hypotheses that the working memory is part of the long term memory
-    \item Information is extracted from there with a kind of cashing mechanism
+    \item Information is extracted from there with a kind of caching mechanism
 \end{itemize} 
 
 \begin{center}
